# ocaml-data-structure

./: .gitignore  README.md  data-structures.opam  dune-project
.github/: REVIEW_GUIDELINES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/copilot_prompts/: ocaml_review_prompt.md
.github/workflows/: ci.yml  copilot-review.yml
examples/: dune  linked_list_example.ml  stack_example.ml
lib/algorithms/: algorithms.ml  dune  sorting.ml  sorting.mli
lib/data_structures/: data_structures.ml  dune  linked_list.ml  linked_list.mli  queue.ml  queue.mli  stack.ml  stack.mli
test/: dune  test_data_structures.ml  test_linked_list.ml
