(lang dune 3.0)

(name data-structures)

(package
 (name data-structures)
 (synopsis "Data structures and algorithms in OCaml")
 (description "Learning repository for data structures and algorithms implementation in OCaml")
 (depends ocaml dune)
 (tags
  (topics "data-structures" "algorithms" "learning")))
